--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -2,20 +2,43 @@
 # https://github.com/firebase/firebase-tools
 
 name: Flutter action
-uses: subosito/flutter-action@v2.18.0
+
+# Trigger the action on push to the main branch
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v4
-      - run: flutter clean && flutter build web && firebase deploy
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      # Check out the repository
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # Set up Flutter
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2.18.0
+        with:
+          flutter-version: '3.22.2'
+
+      # Install dependencies and build the Flutter app for web
+      - name: Install dependencies and build for web
+        run: |
+          flutter clean
+          flutter pub get
+          flutter build web
+
+      # Deploy to Firebase Hosting
+      - name: Deploy to Firebase Hosting
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_NANOD3X }}
           channelId: live
-          projectId: nanod3x
+          projectId: nanod3x 
