--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -21,18 +21,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Set up Flutter
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2.18.0
-        with:
-          flutter-version: '3.22.2'
+      - name: Install dependencies
+        run: flutter pub get
 
-      # Install dependencies and build the Flutter app for web
-      - name: Install dependencies and build for web
-        run: |
-          flutter clean
-          flutter pub get
-          flutter build web
+      - name: Backup custom index.html before build
+        run: ./scripts/pre-build.sh
+
+      - name: Build web app
+        run: flutter clean && flutter build web
+
+      - name: Restore custom index.html after build
+        run: ./scripts/post-build.sh
 
       # Deploy to Firebase Hosting
       - name: Deploy to Firebase Hosting
