--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -31,16 +31,14 @@ jobs:
         run: flutter clean && flutter pub get
 
       - name: Create Firebase Config File
-        run: |
-          echo '{
-            "apiKey": "${{ secrets.FIREBASE_API_KEY }}",
-            "authDomain": "${{ secrets.FIREBASE_AUTH_DOMAIN }}",
-            "projectId": "${{ secrets.FIREBASE_PROJECT_ID }}",
-            "storageBucket": "${{ secrets.FIREBASE_STORAGE_BUCKET }}",
-            "messagingSenderId": "${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}",
-            "appId": "${{ secrets.FIREBASE_APP_ID }}",
-            "measurementId": "${{ secrets.FIREBASE_MEASUREMENT_ID }}"
-          }' > assets/config.json
+        env:
+          FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
+          FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+          FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+          FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
+          FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
+          FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+          FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
 
       - name: Build web
         run: flutter build web
