--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cloud_firestore: ^5.6.5
   firebase_storage: ^12.4.4
   flutter_dotenv: ^5.2.1
+  firebase_remote_config: ^5.4.2
 
 dev_dependencies:
   flutter_test:
