--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_storage: ^12.4.4
   flutter_dotenv: ^5.2.1
   firebase_remote_config: ^5.4.2
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
