Duplicating dex.json asset

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -29,6 +29,9 @@ jobs:
 
       - name: Install dependencies
         run: flutter pub get
+      
+      - name: Copy dex.json to Root
+        run: cp assets/dex.json dex.json
         
       - name: Build web
         run: flutter build web
