--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   firebase_remote_config: ^5.4.2
   json_annotation: ^4.9.0
+  cloud_functions: ^5.3.4
 
 dev_dependencies:
   flutter_test:
