--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_remote_config: ^5.4.2
   json_annotation: ^4.9.0
   cloud_functions: ^5.3.4
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
